--- a/assignment_6.Rmd
+++ b/assignment_6.Rmd
@@ -41,5 +41,81 @@ result1 <- ode(y = C, time = simtimes, func = forest_growth, parms = parms)
 res1_df <- as.data.frame(result1)
 colnames(res1_df) = c("time", "forest_size")
 
+#plot
+ggplot(res1_df, aes(time, forest_size)) + 
+  geom_point() +
+  labs(x = "Time (Years)",
+       y = "Forest Size (kg/C)")
+
 ```
+
+## Run sobol sensitivity analysis
+
+Exploring estimated maximum forest size variation with the parameters:
+- pre canopy closure growth rate (r)
+- post-canopy closure growth rate (g)
+- canopy closure threshold (closure) and carrying capacity(K)
+
+```{r}
+#set up parameter sets
+
+#set 1
+np <- 2000 #number of parameters
+r <- rnorm(mean = 0.05, sd = 0.01, n = np)
+g <- rnorm(mean= 2, sd = 0.2, n = np)
+closure <- rnorm(mean = 50, sd = 5, n = np)
+K <- rnorm(mean = 250, sd = 25, n = np)
+X1 <- cbind.data.frame(r = r, g = g, closure = closure, K = K)
+
+#set 2
+np <- 2000
+r <- rnorm(mean = 0.05, sd = 0.01, n = np)
+g <- rnorm(mean= 2, sd = 0.2, n = np)
+closure <- rnorm(mean = 50, sd = 5, n = np)
+K <- rnorm(mean = 250, sd = 25, n = np)
+X2 <- cbind.data.frame(r = r, g = g, closure = closure, K = K)
+
+# turn any negative values into 0
+X1 <- X1 %>% map_df(pmax, 0.0)
+X2 <- X2 %>% map_df(pmax, 0.0)
+
+#create sobol object
+sens_C <- sobolSalt(model = NULL, X1, X2, nboot = 300)
+
+#add column names
+colnames(sens_C$X) = c("r", "g", "closure", "K")
+
+#gets results for 300 years (evaluating every year)
+simtimes <- seq(from = 1, to = 300)
+parms <- list(r = sens_C$X[, "r"], K = sens_C$X[, "K"], g = sens_C$X[, "g"], closure = sens_C$X[, "closure"])
+
+#turn computing our metrics into a function
+compute_metrics <- function(result) {
+  maxforest <- max(result$C)
+  idx <- which(result$C == max(result$C))[1]
+  idx <- ifelse(is.na(idx), length(result$C), idx)
+  maxyear = result$time[idx]
+  return(list(maxforest = maxforest, maxyear = maxyear))}
+
+#define a wrapper function to run solver, compute metrics, and send back results for each parameter
+c_wrapper <- function(r, K, g, closure, C, simtimes, func) {
+    parms <- list(r = r, K = K, g = g, closure = closure)
+    result <- ode(y = C, time = simtimes, func = func, parms = parms) 
+    colnames(result) = c("time","C")
+  
+    #get metrics
+    metrics <- compute_metrics(as.data.frame(result))
+    
+    return(metrics)
+}
+
+# now use pmap
+
+allresults <- as.data.frame(sens_C$X) %>% 
+  pmap(c_wrapper, C = C, simtimes = simtimes, func = forest_growth)
+
+# extract out results from pmap into a data frame
+allres = allresults %>% map_dfr(`[`,c("maxpop","threshyear"))
+```
+
 
