--- a/assignment_6.Rmd
+++ b/assignment_6.Rmd
@@ -35,7 +35,7 @@ simtimes <- seq(from = 1, to = 300)
 parms <- list(r = r, K = K, g = g, closure = closure)
 
 
-result1 <- ode(y = C, time = simtimes, func = forest_growth, parms = parms)
+result1 <- ode(y = C, times = simtimes, func = forest_growth, parms = parms)
 
 #turn into a df for plotting
 res1_df <- as.data.frame(result1)
@@ -58,61 +58,69 @@ Exploring estimated maximum forest size variation with the parameters:
 
 ```{r}
 #set up parameter sets
+np <- 2000 #number of parameters
 
 #set 1
-np <- 2000 #number of parameters
-r <- rnorm(mean = 0.05, sd = 0.01, n = np)
+r <- rnorm(mean = 0.01, sd = 0.001, n = np)
 g <- rnorm(mean= 2, sd = 0.2, n = np)
 closure <- rnorm(mean = 50, sd = 5, n = np)
 K <- rnorm(mean = 250, sd = 25, n = np)
 X1 <- cbind.data.frame(r = r, g = g, closure = closure, K = K)
 
 #set 2
-np <- 2000
-r <- rnorm(mean = 0.05, sd = 0.01, n = np)
+r <- rnorm(mean = 0.01, sd = 0.001, n = np)
 g <- rnorm(mean= 2, sd = 0.2, n = np)
 closure <- rnorm(mean = 50, sd = 5, n = np)
 K <- rnorm(mean = 250, sd = 25, n = np)
 X2 <- cbind.data.frame(r = r, g = g, closure = closure, K = K)
 
 # turn any negative values into 0
-X1 <- X1 %>% map_df(pmax, 0.0)
-X2 <- X2 %>% map_df(pmax, 0.0)
+X1 <- X1 %>% 
+  map_df(pmax, 0.0)
+X2 <- X2 %>% 
+  map_df(pmax, 0.0)
 
 #create sobol object
-sens_C <- sobolSalt(model = NULL, X1, X2, nboot = 300)
+sens_C = sobolSalt(model = NULL, X1, X2, nboot = 300)
 
 #add column names
 colnames(sens_C$X) = c("r", "g", "closure", "K")
 
-#gets results for 300 years (evaluating every year)
-simtimes <- seq(from = 1, to = 300)
+#get results for 300 years (evaluating every year)
 
 #define a wrapper function to run solver, compute metrics, and send back results for each parameter
-c_wrapper <- function(r, K, g, closure, C, simtimes, func) {
-    parms <- list(r = r, K = K, g = g, closure = closure)
-    result <- ode(y = C, time = simtimes, func = func, parms = parms) 
-    colnames(result) = c("time","C")
+c_wrapper <- function(r, g, closure, K, Cinit, times, func) {
+    parms <- list(r = r, g = g, closure = closure, K = K)
+    result <- ode(y = Cinit, times = times, func = func, parms = parms) 
   
-    #get metrics
-    #metrics <- compute_metrics(as.data.frame(result))
+    #turn into dataframe and get max value
+    result <- as.data.frame(result)
+    colnames(result) = c("time", "C")
+    max_C <- max(result$C)
     
-    results_df <- as.data.frame(result)
-    colnames(results_df) = c("time", "C")
-    
-    
-    res_max <- max(results_df$C)
-    
-    return(list(max_C = res_max))
+    return(list(max_C = max_C))
 }
 
-# now use pmap
+
+#use pmap to apply wrapper to all parameter sets
+
+times = 1:300
+Cinit = 10
 
 allresults <- as.data.frame(sens_C$X) %>% 
-  pmap(c_wrapper, C = C, simtimes = simtimes, func = forest_growth)
+  pmap(c_wrapper, Cinit = Cinit, times = times, func = forest_growth)
+
 
 # extract out results from pmap into a data frame
-allres = allresults %>% map_dfr(`[`,c("maxpop","threshyear"))
+allres <- allresults %>% 
+  map_dfr(`[`,c("max_C"))
+
+# create boxplot
+ggplot(allres, aes(y = max_C)) +
+  geom_boxplot(size = 0.9, color = "darkgreen") +
+  labs(y = "Maximum carbon after 300 years") +
+  theme_minimal() +
+  theme(axis.text.x = element_blank(), axis.ticks.x = element_blank())
 ```
 
 
