edits to discussion

--- a/assignment_6.Rmd
+++ b/assignment_6.Rmd
@@ -146,4 +146,5 @@ sens_C_max$T
 ```
 
 ## Discussion
-We find that variability in r, or pre canopy closure growth rate, has the greatest affect on variability in maximum forest size after 300 years. Variability in g (post canopy closure growth rate) has the second greatest affect on variability in maximum forest size, followed by the canopy closure threshold ("closure") and then carrying capacity (K). This means that the most important factors affecting the size of a forest (according to this analysis) are the growth rates of the forest rather than carrying capacity or the canopy closure threshold. Growth rates of trees may be affected by resource availability, such as precipitation and soil nutrients, which can both be impacted by climate change as increasing temperature and weather extremes reduce the suitability of many habitats globally. Under the scenario analyzed, ensuring that the conditions remain as optimal as possible for tree growth will ultimately allow land managers to maximize forest size.
+
+We find that variability in r, or pre canopy closure growth rate, has the greatest effect on variability in maximum forest size after 300 years. Variability in g (post canopy closure growth rate) has the second greatest effect on variability in maximum forest size, followed by the canopy closure threshold ("closure") and then carrying capacity (K). This means that the most important factors affecting the size of a forest (according to this analysis) are the growth rates of the forest rather than carrying capacity or the canopy closure threshold. Growth rates of trees may be affected by resource availability, such as precipitation and soil nutrients, which can both be impacted by climate change as increasing temperature and weather extremes reduce the suitability of many habitats globally. Under the scenario analyzed, ensuring that the conditions remain optimal for tree growth will ultimately allow land managers to maximize forest size. However, we might expect other variables such as carrying capacity to be more influential at time periods greater than 300 years. Therefore, we recommend that forward-looking land managers conduct this analysis for different lengths of time to determine which factors are more influential at different stages of forest growth. 
